# actix-jwt-auth-restfull-api

./: .env  Cargo.toml
migrations/: 20230904165514_init.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  models.rs
src/extractors/: auth.rs
src/scopes/: auth.rs  users.rs
src/utils/: password.rs  token.rs
