[package]
name = "actix_jwt_auth_restfull_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
argon2 = "0.5.1"
async-trait = "0.1.73"
chrono = { version = "0.4.28", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
